show shortcuts in context menu (see QTBUG-69452)